# Detections

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: alert-output.md  event-format.md  rule-format.md  writing-rules.md
greynoc_detections/: __init__.py  constants.py  exceptions.py  normalize.py  validate.py
rules/examples/: ai_user_agent_abuse_basic.json  brute_force.json  malware_beaconing.json  port_scan.json  scan_finding.json  suspicious_powershell.json
schemas/: detection-rule.schema.json
tests/: sample_events.json  test_normalize_event.py  test_validate_rules.py  test_validator_hardening.py
