[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "greynoc-detections"
version = "0.1.0"
description = "Public-safe GreyNOC detection rules, schemas, docs, and validation helpers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GreyNOC" }]
keywords = ["security", "detections", "rules", "soc", "validation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
greynoc-detections-validate = "greynoc_detections.validate:main"

[tool.setuptools.packages.find]
include = ["greynoc_detections*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

